corrected spelling of Georgia font in CSS.

--- a/dropcaps/dropcaps.css
+++ b/dropcaps/dropcaps.css
@@ -1,5 +1,5 @@
 p.dropcaps:first-letter {
-font-family: Georgiam, New Times Roman, Serif;
+font-family: Georgia, New Times Roman, Serif;
 font-weight:bold;
 float:left;
 line-height:30px;
